made small change to body margin-bottom so the footer was no longer covering content

--- a/Homework2.css
+++ b/Homework2.css
@@ -45,7 +45,7 @@ html {
     position: relative;
     display: flex;
     flex-direction: column;
-    
+    margin-bottom: 100px;
 
   }
   .footer {
